--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -215,6 +215,10 @@ footer
 		.fb_iframe_widget
 			left: -2.25rem
 
+	#bye
+		padding-top: 8rem
+		padding-bottom: 9rem
+
 // .content
 // 	width: 38.75em
 // 	margin-right: auto
