--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -45,6 +45,8 @@ video
 
 video
 	display: block
+	&:hover
+		cursor: pointer
 
 // Mixins
 .headline
@@ -218,6 +220,7 @@ footer
 	#bye
 		padding-top: 8rem
 		padding-bottom: 9rem
+		text-align: center
 
 // .content
 // 	width: 38.75em
