Add better fallback fonts

--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -8,8 +8,8 @@ $color-main: #68faff
 $color-black: #444
 $color-white: #fff
 
-$font-family-base: "orator-std"
-$font-family-headlines: "ff-good-headline-web-pro-con", Helvetica
+$font-family-base: "orator-std", "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace
+$font-family-headlines: "ff-good-headline-web-pro-con", "Helvetica Neue", Helvetica, Arial, sans-serif
 
 $font-size-base: 16px
 
