Fix firefox max-width bug

--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -43,6 +43,9 @@ img,
 video
 	max-width: 100%
 
+img
+	display: block
+
 video
 	display: block
 	&:hover
@@ -108,6 +111,8 @@ a:link
 		img
 			// display: block
 			vertical-align: bottom
+	&.is-block
+		display: block
 	small &,
 	&.link-secondary
 		background-color: transparent
