--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -63,8 +63,8 @@ video
 h1, .h1,
 h2, .h2,
 h3, .h3,
-h5, .h5,
-h6, .h6
+h4, .h4,
+h5, .h5
 	@extend .headline
 
 h1, .h1
@@ -85,19 +85,16 @@ h3, .h3
 	+font-size($font-size-xxl)
 
 h4, .h4
-	margin-top: 0
-
-h5, .h5
 	margin-top: 3rem
 	margin-bottom: 1rem
 	+font-size($font-size-xl)
 	color: $color-main
 .container-color
-	h5, .h5
+	h4, .h4
 		color: $color-white
 
-h6, .h6
-	@extend h5
+h5, .h5
+	@extend h4
 	+font-size($font-size-l)
 
 a:link
@@ -116,17 +113,21 @@ a:link
 	small &,
 	&.link-secondary
 		background-color: transparent
-a:hover,
-a:focus
+a:hover, a.hover,
+a:focus, a.focus
 	background-color: $color-white
 a:visited
 	color: inherit
 .container-color
 	a:link
 		background-color: $color-white
-	a:hover,
-	a:focus
+	a:hover, a.hover,
+	a:focus, a.focus
 		background-color: $color-main
+
+a.has-img:hover + a.is-img-link-helper
+	@extend a.hover
+
 
 ul.is-unstyled
 	list-style-type: none
@@ -175,10 +176,8 @@ footer
 		top: -12.5rem
 
 #projects
-	h4 
-		margin-top: -1px
-		a
-			line-height: 1.6
+	a.is-img-link-helper
+		line-height: 1.6
 
 #social
 	.social-link
