Impruv images, layout and design

--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -143,6 +143,13 @@ footer
 .lead
 	+font-size($font-size-m)
 	text-transform: uppercase
+
+.text-center
+	text-align: center
+
+.center
+	margin-right: auto
+	margin-left: auto
 	
 .container-color
 	background-color: $color-main
