--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -112,7 +112,7 @@ a:link
 		display: block
 a.link-secondary:link
 	background-color: transparent
-a:hover
+a:hover,
 a:focus
 	background-color: $color-white
 a.link-secondary:hover, 
@@ -123,13 +123,13 @@ a:visited
 .container-color
 	a:link
 		background-color: $color-white
-	a:hover, a.hover,
-	a:focus, a.focus
+	a:hover,
+	a:focus
 		background-color: $color-main
 small a
 	@extend a.link-secondary
 a.has-img:hover + a.is-img-link-helper
-	@extend a.hover
+	@extend a:hover
 
 
 ul.is-unstyled
