--- a/style/src/sass/style.sass
+++ b/style/src/sass/style.sass
@@ -120,8 +120,6 @@ a:visited
 	a:hover,
 	a:focus
 		background-color: $color-white
-small a
-	@extend a.link-secondary
 a.has-img:hover + a.is-img-link-helper
 	@extend a:hover
 
@@ -237,7 +235,6 @@ footer
 #footer
 	text-align: center
 	a:link
-		@extend .link-secondary
 		text-transform: uppercase
 
 // TODO: media queries
@@ -246,6 +243,7 @@ footer
 		font-size: 1rem
 	.lead
 		margin-top: 6rem
+		margin-bottom: 6rem
 	.content
 		width: 42.5rem
 		margin-right: auto
